<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pocket Programming</string>
    <string name="twitter_account">pocket_pro</string>
    <string name="twitter_hashtag">PocketProgramming,Rails,Ruby</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_global_navigation">Menu</string>

    <string name="title_activity_review">Review</string>
    <string name="title_activity_summary">Summary</string>

    <string name="title_activity_no_network">No Network</string>
    <string name="title_activity_no_summary">Summary</string>
    <string name="title_activity_question_and_answer">Question &amp; Explanation</string>

    <!-- Common -->
    <string name="next_question">Next question</string>
    <string name="nth_question" formatted="false">Q%1$d</string>
    <string name="correct">correct</string>
    <string name="wrong">wrong</string>


    <!-- XML File Strings -->
    <!-- activity_no_network -->
    <string name="no_network">No network found.\n Check your internet environment, please.</string>
    <!-- fragment_answer -->
    <string name="explanation">Explanation</string>
    <!-- fragment_choice -->
    <string name="no_idea">Show answer</string>
    <!-- fragment_complete_day -->
    <string name="default_finished_day">DAY has been completed! Good job!</string>
    <string name="retry">Retry</string>
    <string name="share_day_score">Share</string>
    <string name="to_next_day">Next Day</string>
    <string name="default_what_they_learn_in_the_day">What you\'ve learned in the DAY</string>
    <!-- fragment_level_up_dialog -->
    <string name="level_up_to">Congratulations!</string>
    <string name="share_twitter">Let\'s share on Twitter</string>
    <string name="close">Close</string>
    <!-- fragment_main -->
    <string name="current_level">Your current levels</string>
    <string name="learning_progress">Progress in learning</string>
    <string name="challenge">Challenge</string>
    <!-- fragment_no_summary -->
    <string name="no_completed_week">No week has been completed yet.</string>
    <string name="no_completed_week_description">You can see the summary when you\'ve completed a week(7 days).</string>
    <!-- fragment_result_analysis -->
    <string name="understood_genre">Genres you understand</string>
    <string name="not_understood_genre">Genres you need more practice</string>
    <string name="challenge_next_week">Let\'s start the next week</string>
    <!-- row_practice_results -->
    <string name="reconfirm_question_answer">▶ See the explanation.</string>
    <!-- End of XML File Strings -->


    <!-- LevelUpDialogFragment -->
    <string name="level_up" formatted="false">Your %1$s level is ...</string>

    <!-- DayQuestionsRepository -->
    <!-- MainViewModel -->
    <string name="challenge_nth_day" formatted="false">Let\'s start DAY%1$d</string>

    <!-- SummaryViewModel -->
    <string name="challenge_nth_week" formatted="false">Let\'s start WEEK%1$d</string>

    <!-- TwitterShare -->
    <string name="tweet_level_up" formatted="false">My %1$s level has been improved from \"%2$s\" to \"%3$s\" in Pocket Programming!</string>
    <string name="tweet_day_score" formatted="false">【Pocket Programming】I\'ve completed DAY %2$d in WEEK %1$d! The score is %3$d.</string>

    <!-- CompleteDayViewModel -->
    <string name="what_they_learn_in_the_day" formatted="false">What you\'ve learned in DAY%1$d</string>
    <string name="finished_day" formatted="false">DAY%1$d has been completed! Good job!</string>
    <string name="to_week_result">Summary of this week</string>

    <string name="facebook_app_id"></string>
</resources>
