<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainContents"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/spacing_normal"
    android:paddingRight="@dimen/spacing_normal"
    android:background="@drawable/background_level_up"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/spacing_huge"
        android:paddingBottom="@dimen/spacing_huge"
        android:gravity="top|center"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/element_level_up"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/element_stars"
            android:layout_marginTop="@dimen/spacing_normal"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="top|center"
        >
        <TextView
            android:id="@+id/levelUpTarget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_large"
            android:textColor="@color/md_grey_800"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="-10dp"
            >
            <ImageView
                android:id="@+id/originalLevel"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginRight="@dimen/spacing_normal"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_arrow_gray"
                android:paddingLeft="@dimen/spacing_normal"
                />
            <ImageView
                android:id="@+id/newLevel"
                android:layout_width="120dp"
                android:layout_height="120dp"
                />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level_up_to"
            android:textSize="@dimen/font_large"
            android:textColor="@color/md_grey_800"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center|center"
        android:paddingTop="@dimen/spacing_large"
        android:paddingBottom="@dimen/spacing_large"
        >
        <Button
            android:id="@+id/shareToTwitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_twitter_large"
            android:text="@string/share_twitter"
            android:textSize="@dimen/font_normal"
            />
        <Button
            android:id="@+id/closeShareModalBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:textSize="@dimen/font_normal"
            android:textColor="@color/md_grey_700"
            android:background="#0000"
            style="?android:attr/borderlessButtonStyle"
            />
    </LinearLayout>
</LinearLayout>
