<ScrollView
    android:id="@+id/ScrollView"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="ffab0.pocketprogramming.fragments.CompleteDayFragment"
        android:paddingBottom="80dp"
        android:layout_marginTop="@dimen/spacing_normal"
        >
        <LinearLayout
            android:id="@+id/score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/spacing_normal"
            android:background="@drawable/background_with_shadow"
            android:padding="@dimen/spacing_small"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="30dp"
                    android:src="@drawable/icon_crawn"
                    />
                <ffab0.pocketprogramming.util.WrapTextView
                    android:id="@+id/scoreHeader"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/default_finished_day"
                    style="@style/CardHeader"
                    android:gravity="center|left"
                    android:paddingBottom="0dp"
                    android:layout_marginLeft="@dimen/spacing_tiny"
                    />
            </LinearLayout>
            <ImageView
                android:id="@+id/scoreImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <LinearLayout
                android:id="@+id/segueTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginBottom="@dimen/spacing_tiny"
                    >
                    <Button
                        android:id="@+id/toRetry0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/retry"
                        android:background="@drawable/button_retry"
                        android:textSize="@dimen/font_normal"
                        android:paddingLeft="15dp"
                        android:paddingTop="5dp"
                        android:layout_marginRight="@dimen/spacing_normal"
                        />
                    <Button
                        android:id="@+id/shareToTwitter0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/share_day_score"
                        android:background="@drawable/button_twitter"
                        android:textSize="@dimen/font_normal"
                        android:paddingTop="5dp"
                        />
                </LinearLayout>
                <Button
                    android:id="@+id/toNextDay0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to_next_day"
                    android:background="@drawable/button_next_large"
                    android:textSize="@dimen/font_normal"
                    android:paddingTop="5dp"
                    android:layout_marginRight="2dp"
                    />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/questionList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/spacing_normal"
            android:background="@drawable/background_with_shadow"
            android:padding="@dimen/spacing_small"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:src="@drawable/icon_pencil"
                    />
                <ffab0.pocketprogramming.util.WrapTextView
                    android:id="@+id/questionListHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_what_they_learn_in_the_day"
                    android:height="35dp"
                    style="@style/CardHeader"
                    android:gravity="center|left"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/dayQuestionsListWrap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nextStep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="@dimen/spacing_tiny"
                >
                <Button
                    android:id="@+id/toRetry1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/retry"
                    android:background="@drawable/button_retry"
                    android:textSize="@dimen/font_normal"
                    android:paddingLeft="15dp"
                    android:paddingTop="5dp"
                    android:layout_marginRight="@dimen/spacing_normal"
                    />
                <Button
                    android:id="@+id/shareToTwitter1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share_day_score"
                    android:background="@drawable/button_twitter"
                    android:textSize="@dimen/font_normal"
                    android:paddingTop="5dp"
                    />
            </LinearLayout>
            <Button
                android:id="@+id/toNextDay1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_next_day"
                android:background="@drawable/button_next_large"
                android:textSize="@dimen/font_normal"
                android:paddingLeft="15dp"
                android:paddingTop="5dp"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
