<ScrollView
    android:id="@+id/ScrollView"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:id="@+id/mainContents"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="ffab0.pocketprogramming.fragments.MainFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/spacing_normal"
        android:paddingBottom="80dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/spacing_normal"
            android:background="@drawable/background_with_shadow"
            android:padding="@dimen/spacing_small"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/icon_crawn"
                    android:layout_marginRight="@dimen/spacing_tiny"
                    />
                <TextView
                    android:id="@+id/OverviewCardHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/current_level"
                    style="@style/CardHeader"
                    android:gravity="center|left"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <LinearLayout
                    android:id="@+id/OverviewRuby"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginRight="@dimen/spacing_tiny"
                    >
                    <LinearLayout
                        android:id="@+id/OverviewRubyTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:layout_marginBottom="@dimen/spacing_tiny"
                        android:gravity="center|center"
                        >
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/icon_balloon_ruby2"
                            android:layout_marginRight="@dimen/spacing_tiny"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/OverviewRubyScore"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/corner_radius"
                        android:gravity="center|center"
                        >
                        <ImageView
                            android:id="@+id/OverviewRubyScoreImage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/rank_b"
                            android:layout_marginTop="-5dp"
                            />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:layout_marginBottom="@dimen/spacing_tiny"
                        android:gravity="center|center"
                        >
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/icon_balloon_rails2"
                            android:layout_marginRight="@dimen/spacing_tiny"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/OverviewRailsScore"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/corner_radius"
                        android:gravity="center|center"
                        >
                        <ImageView
                            android:id="@+id/OverviewRailsScoreImage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/rank_a"
                            android:layout_marginTop="-5dp"
                            />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ProgressWrap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/spacing_normal"
            android:background="@drawable/background_with_shadow"
            android:padding="@dimen/spacing_small"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/icon_pencil"
                    android:layout_marginRight="@dimen/spacing_tiny"
                    />
                <TextView
                    android:id="@+id/ProgressCardHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/learning_progress"
                    style="@style/CardHeader"
                    />
            </LinearLayout>
            <TextView
                android:id="@+id/weekText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:text="WEEK"
                />
            <LinearLayout
                android:id="@+id/weekProgressWrap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <ImageView
                    android:id="@+id/weekProgress"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/element_birds1_1"
                    />
            </LinearLayout>
            <TextView
                android:id="@+id/dayText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:text="DAY"
                />
            <LinearLayout
                android:id="@+id/dayProgressWrap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <ImageView
                    android:id="@+id/dayProgress"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/icon_eggs1_1"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/NextDayWrap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <Button
                android:id="@+id/btnToSecond"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/challenge"
                style="@style/Button"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
